--- a/about.html
+++ b/about.html
@@ -6,23 +6,23 @@
 		<link rel="icon" href="/logo.svg" sizes="any" type="image/svg+xml" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="/_app/immutable/assets/0.CWl8RhDp.css" rel="stylesheet">
+		<link href="/_app/immutable/assets/0.CE6GeN3v.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/3.CZFwu5eM.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/logos.CtNwUba2.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CtQ2VBcX.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CjEQWRTo.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.C_n3vbXC.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CrFsR3Fg.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.8Qe6rYoE.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/props.BdADNYwD.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/this.B_iW_YFK.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.DGM56pdO.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.BYo8ir5C.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/string.httjS5GH.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/size.BvrQXxyX.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.w7CBDoPs.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/stores.D6rzFTWv.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/logos.B3QPC0m4.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BWaR4wkX.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DgcEK6VC.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.CZQB1nti.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CJdj9wn1.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.C0UmEbNy.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/props.DxOEtOAZ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/this.BfuKCEPm.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.ChP-Lw3-.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.BIU3JY_g.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/string.BVRlajkr.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/size.BuNgxkid.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.D1cMnPgw.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/stores.BRtd3rS5.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/logos.CzCIJtmc.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
 	<meta name="color-scheme" content="light dark" />
 	
 	<script nonce="%sveltekit.nonce%">
@@ -43,7 +43,7 @@
 			
 			<script>
 				{
-					__sveltekit_gfd5ip = {
+					__sveltekit_3usqja = {
 						base: ""
 					};
 
@@ -52,8 +52,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CtQ2VBcX.js"),
-						import("/_app/immutable/entry/app.CrFsR3Fg.js")
+						import("/_app/immutable/entry/start.BWaR4wkX.js"),
+						import("/_app/immutable/entry/app.CJdj9wn1.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
