--- a/about.html
+++ b/about.html
@@ -6,23 +6,23 @@
 		<link rel="icon" href="/logo.svg" sizes="any" type="image/svg+xml" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="/_app/immutable/assets/0.CE6GeN3v.css" rel="stylesheet">
-		<link href="/_app/immutable/assets/3.CZFwu5eM.css" rel="stylesheet">
-		<link href="/_app/immutable/assets/logos.CtNwUba2.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BWaR4wkX.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DgcEK6VC.js">
+		<link href="/_app/immutable/assets/0.Mo8NFNoH.css" rel="stylesheet">
+		<link href="/_app/immutable/assets/3.Dx36mg0X.css" rel="stylesheet">
+		<link href="/_app/immutable/assets/logos.bqgmxUqm.css" rel="stylesheet">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DmzxaIhk.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BLHlKYHJ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.CZQB1nti.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CJdj9wn1.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.C4_mM96W.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.C0UmEbNy.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/props.DxOEtOAZ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/this.BfuKCEPm.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.ChP-Lw3-.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.BIU3JY_g.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.BqZa8-rR.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/string.BVRlajkr.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/size.BuNgxkid.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.D1cMnPgw.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/stores.BRtd3rS5.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/logos.CzCIJtmc.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.DeDf8EP_.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/stores.BBImx5TN.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/logos.7bm4nbWt.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
 	<meta name="color-scheme" content="light dark" />
 	
 	<script nonce="%sveltekit.nonce%">
@@ -43,7 +43,7 @@
 			
 			<script>
 				{
-					__sveltekit_3usqja = {
+					__sveltekit_1i2pwd8 = {
 						base: ""
 					};
 
@@ -52,8 +52,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BWaR4wkX.js"),
-						import("/_app/immutable/entry/app.CJdj9wn1.js")
+						import("/_app/immutable/entry/start.DmzxaIhk.js"),
+						import("/_app/immutable/entry/app.C4_mM96W.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
