--- a/about.html
+++ b/about.html
@@ -9,20 +9,20 @@
 		<link href="/_app/immutable/assets/0.Mo8NFNoH.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/3.Dx36mg0X.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/logos.bqgmxUqm.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.B484aLbW.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DGKvFiBd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.DCgxkHsh.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.C4TP54fB.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Cbxh1gp_.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/props.DCk1MVJO.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/this.BB5iIfa8.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.jzx3d1I6.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.CN484zBk.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/string.WaS5GYmo.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/size.M-AgP1Ky.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.D-yhbPYS.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/stores.D0AnQ4H9.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/logos.urEGz6z5.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BJrXYaOa.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.B-vWwywG.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.BR76PY5e.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DTTkcTQC.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.CitKM3u6.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/props.BAWxlOZR.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/this.V3fDrUXp.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.C-cEhyjl.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.DR-1pZWR.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/string.Oe6_Qmj5.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/size.DyUGuB3S.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.6WB-f-SH.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/stores.xH9P50i-.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/logos.wxjb7ADC.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
 	<meta name="color-scheme" content="light dark" />
 	
 	<script nonce="%sveltekit.nonce%">
@@ -43,7 +43,7 @@
 			
 			<script>
 				{
-					__sveltekit_18uobti = {
+					__sveltekit_1kz11mi = {
 						base: ""
 					};
 
@@ -52,8 +52,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.B484aLbW.js"),
-						import("/_app/immutable/entry/app.C4TP54fB.js")
+						import("/_app/immutable/entry/start.BJrXYaOa.js"),
+						import("/_app/immutable/entry/app.DTTkcTQC.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
