--- a/about.html
+++ b/about.html
@@ -9,20 +9,20 @@
 		<link href="/_app/immutable/assets/0.Mo8NFNoH.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/3.Dx36mg0X.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/logos.bqgmxUqm.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.NFJplYJQ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Zd6YPtfU.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DBMTeDEj.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DIalrNP4.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.DeHRvpZ8.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.C54R8cZ1.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.1nV3q1Rm.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/props.Bla56LFO.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.D0rA8HCW.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Bzskc1i2.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/props.DM7zoHnH.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/this.B2kCRRG0.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.lkjkd9dB.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.Cdpc7Y2w.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/string.BR5Q1s6G.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.BIJUQG60.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/string.G2lWkmUV.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/size.CNKbIQXo.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.yIaiYq4M.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/stores.BYEVdH4D.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/logos.D4VA6v8u.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.CXcHJUWU.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/stores.DOSt7a0s.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/logos.B_1WEB9s.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
 	<meta name="color-scheme" content="light dark" />
 	
 	<script nonce="%sveltekit.nonce%">
@@ -43,7 +43,7 @@
 			
 			<script>
 				{
-					__sveltekit_12bo591 = {
+					__sveltekit_h2v2ep = {
 						base: ""
 					};
 
@@ -52,8 +52,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.NFJplYJQ.js"),
-						import("/_app/immutable/entry/app.C54R8cZ1.js")
+						import("/_app/immutable/entry/start.DBMTeDEj.js"),
+						import("/_app/immutable/entry/app.D0rA8HCW.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
