--- a/about.html
+++ b/about.html
@@ -9,18 +9,18 @@
 		<link href="/_app/immutable/assets/0.Cs12TMTw.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/3.Dx36mg0X.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/stores.bqgmxUqm.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.kYFbBMy8.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CJvhV-v8.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.s6ZIINds.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BjDwCKX0.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/C9g255QM.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.lYberB4a.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.gmNvKzA5.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/B79KVrn8.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Ca1v2WBK.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/WmchmLqH.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.G4Bc2ogq.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/D0O641Gm.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/OG3VvUIH.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.BOkCAX_r.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/exo2yKwa.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.BvZqJUG0.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DLHnjZ6o.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
 	<meta name="color-scheme" content="light dark" />
 	
 	<script nonce="%sveltekit.nonce%">
@@ -41,15 +41,15 @@
 			
 			<script>
 				{
-					__sveltekit_va0oaa = {
+					__sveltekit_118ogqc = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.kYFbBMy8.js"),
-						import("/_app/immutable/entry/app.lYberB4a.js")
+						import("/_app/immutable/entry/start.s6ZIINds.js"),
+						import("/_app/immutable/entry/app.gmNvKzA5.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
