--- a/about.html
+++ b/about.html
@@ -6,20 +6,20 @@
 		<link rel="icon" href="/logo.svg" sizes="any" type="image/svg+xml" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="/_app/immutable/assets/0.DyWiV8Us.css" rel="stylesheet">
+		<link href="/_app/immutable/assets/0.DF5x0vLx.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/3.Dx36mg0X.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.ClXg_KB9.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CqyS9zuL.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CbZnHuiY.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Wwn1uHRB.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/C59eXXcN.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BanEY4TC.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.jVYbpPU7.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/NHtvfFqk.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DiHO4w6l.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/C3y6fu3L.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.Db2t23o9.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.BNPCBQa2.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/KL4Q2inH.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BxtGjXuv.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.DgWJh2H5.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Bzf5rFPc.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.CU7I0SkB.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/D94Rlu_N.js"><!--[--><!--]--><!--[--><!--[!--><!--]--> <!--[--><!---->
 	<meta name="color-scheme" content="light dark" />
 	
 	<script nonce="%sveltekit.nonce%">
@@ -40,15 +40,15 @@
 			
 			<script>
 				{
-					__sveltekit_ucf16j = {
+					__sveltekit_1cdldek = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.ClXg_KB9.js"),
-						import("/_app/immutable/entry/app.BanEY4TC.js")
+						import("/_app/immutable/entry/start.CbZnHuiY.js"),
+						import("/_app/immutable/entry/app.jVYbpPU7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
