--- a/index.html
+++ b/index.html
@@ -15,36 +15,37 @@
 			);
 		</script>
 
-		<meta http-equiv="content-security-policy" content="child-src 'none'; default-src 'none'; frame-src 'self'; worker-src 'self' blob:; connect-src 'self'; font-src 'self' data: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; img-src 'self' data: blob: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; manifest-src 'self'; media-src 'self' blob: mediastream: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; object-src 'none'; script-src 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-lcpNAayeJ+fZi2VsWV10VSvbKGfba4+zxMd2vSdGOho='; script-src-elem 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-lcpNAayeJ+fZi2VsWV10VSvbKGfba4+zxMd2vSdGOho='; script-src-attr 'none'; style-src 'self' 'unsafe-inline'; style-src-elem 'self' 'unsafe-inline'; style-src-attr 'unsafe-inline'; base-uri 'none'; form-action 'self'; upgrade-insecure-requests">
-		<link href="/_app/immutable/assets/0.C2Y0_eVr.css" rel="stylesheet">
+		<meta http-equiv="content-security-policy" content="child-src 'none'; default-src 'none'; frame-src 'self'; worker-src 'self' blob:; connect-src 'self'; font-src 'self' data: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; img-src 'self' data: blob: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; manifest-src 'self'; media-src 'self' data: blob: mediastream: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; object-src 'none'; script-src 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-aVJGNq9/zwC8uwIRQU1T9/dbHL+Ml83oAfb/9BEPV2Y='; script-src-elem 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-aVJGNq9/zwC8uwIRQU1T9/dbHL+Ml83oAfb/9BEPV2Y='; script-src-attr 'none'; style-src 'self' 'unsafe-inline'; style-src-elem 'self' 'unsafe-inline'; style-src-attr 'unsafe-inline'; base-uri 'none'; form-action 'self'; upgrade-insecure-requests">
+		<link href="/_app/immutable/assets/0.DSI_jmtR.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/2.BuyEgkzB.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CQ2PbcLw.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Dz9HL-ys.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/C59eXXcN.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.hFyy-bLt.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/NHtvfFqk.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DiHO4w6l.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/C3y6fu3L.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.BDpstDth.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/KL4Q2inH.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BxtGjXuv.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/2.CC5JBTH1.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/nnOr29AR.js"><!--[--><!--]--><!--[--><!--[!--><!--]--><!--]--><title>@ryanatkn/fuz_template</title>
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BGFb4nqo.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/326ZeMK2.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/pGaGzXR4.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CQkKQsyc.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DNexEc0O.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CilqUC60.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/dfFnApY_.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.CJ3tF6V3.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/C78swBgH.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/x-s4OIEc.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/2.D0paFKFn.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/ycH9JzX1.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DXb403oK.js"><!--[--><!--]--><!--[--><!--[!--><!--]--><!--]--><title>@ryanatkn/fuz_template</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents"><!--[--><!--[--><!----><!--[!--><!----><main class="svelte-aa2n4y"><section class="box"><header class="box pt_xl"><svg viewBox="0 0 100 100" aria-label="a friendly brown spider facing you" style="width: var(--icon_size_xl); height: var(--icon_size_xl); flex-shrink: 1;"><!--[!--><!--]--><!--[--><!--[--><path fill="#84522a" d="M 26.253917,88.532336 29.904106,71.394855 40.667193,53.342811 40.258534,49.99234 38.417407,49.000991 22.876908,50.369035 9.4865496,53.880193 2.3019024,57.978424 0.42708056,57.27994 7.2642726,51.086985 20.811326,45.373351 37.960128,42.356792 39.354818,40.107008 38.229925,38.149883 26.030989,27.105568 14.46539,21.861786 8.0479986,18.615387 l -0.41428,-1.710463 8.2789464,1.499862 13.012873,5.003724 13.447448,10.696856 1.680801,-0.729547 0.222439,-1.343157 -3.983998,-12.128053 -5.730215,-9.573597 -0.823624,-5.1744052 1.16944,-1.165102 2.604334,6.3355162 6.612025,7.08777 4.874534,11.55989 2.800804,0.515574 4.48815,-1.359246 1.521623,-8.687062 5.685014,-8.620764 2.75965,-6.8316782 1.094578,1.128569 -1.293029,5.4222362 -4.084776,11.06803 -0.484994,8.377408 0.194311,1.192896 1.42954,1.700726 11.563936,-10.644623 9.878262,-8.331535 8.732915,-3.390708 -0.387305,1.402757 -5.294686,3.023816 -10.445054,10.705792 -9.561599,13.627899 -0.438945,1.602755 1.001398,1.666754 17.376932,3.986302 9.537375,6.940531 4.325785,4.636405 0.211208,1.557106 -6.15842,-4.279925 -10.413771,-5.155697 -15.838715,-1.696223 -0.83461,1.144484 0.774499,2.593247 9.737644,16.194355 3.925704,17.214082 0.07146,10.277289 -1.706242,1.13628 -2.009721,-9.21637 -5.894265,-16.88027 -12.292087,-17.295813 -4.177778,-0.585888 -7.294671,2.935716 -11.138052,16.645915 -6.462422,17.752509 -1.634756,7.206641 -2.070766,-1.52923 z"></path><!--]--><!--]--></svg><!----> <h1 class="mt_xl2">fuz_template</h1></header> <!----><a class="card svelte-2rjm44 link left" href="/about"><!--[--><div class="icon svelte-2rjm44"><!--[--><!--]--></div><!--]--> <div class="content svelte-2rjm44"><!---->about<!----></div> <!--[!--><!--]--><!----></a><!----><!----></section> <button type="button" class="row py_md px_xl svelte-3v1vrg"><div class="size_xl5">🐶</div> <div class="mreow svelte-3v1vrg">mreow</div></button> <div class="mreows svelte-3v1vrg"><!--[--><!--]--></div><!----></main><!----><!----> <!--[!--><!--]--><!----><!--]--> <!--[--><div class="contextmenu_layout svelte-aif9y6" aria-hidden="true"></div><!--]--> <!--[!--><!--]--><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div style="display: contents"><!--[--><!--[--><!----><!--[!--><!----><main class="svelte-aa2n4y"><section class="box"><header class="box pt_xl"><svg viewBox="0 0 100 100" aria-label="a friendly brown spider facing you" style="width: var(--icon_size_xl); height: var(--icon_size_xl); flex-shrink: 1;"><!--[!--><!--]--><!--[--><!--[--><path fill="#84522a" d="M 26.253917,88.532336 29.904106,71.394855 40.667193,53.342811 40.258534,49.99234 38.417407,49.000991 22.876908,50.369035 9.4865496,53.880193 2.3019024,57.978424 0.42708056,57.27994 7.2642726,51.086985 20.811326,45.373351 37.960128,42.356792 39.354818,40.107008 38.229925,38.149883 26.030989,27.105568 14.46539,21.861786 8.0479986,18.615387 l -0.41428,-1.710463 8.2789464,1.499862 13.012873,5.003724 13.447448,10.696856 1.680801,-0.729547 0.222439,-1.343157 -3.983998,-12.128053 -5.730215,-9.573597 -0.823624,-5.1744052 1.16944,-1.165102 2.604334,6.3355162 6.612025,7.08777 4.874534,11.55989 2.800804,0.515574 4.48815,-1.359246 1.521623,-8.687062 5.685014,-8.620764 2.75965,-6.8316782 1.094578,1.128569 -1.293029,5.4222362 -4.084776,11.06803 -0.484994,8.377408 0.194311,1.192896 1.42954,1.700726 11.563936,-10.644623 9.878262,-8.331535 8.732915,-3.390708 -0.387305,1.402757 -5.294686,3.023816 -10.445054,10.705792 -9.561599,13.627899 -0.438945,1.602755 1.001398,1.666754 17.376932,3.986302 9.537375,6.940531 4.325785,4.636405 0.211208,1.557106 -6.15842,-4.279925 -10.413771,-5.155697 -15.838715,-1.696223 -0.83461,1.144484 0.774499,2.593247 9.737644,16.194355 3.925704,17.214082 0.07146,10.277289 -1.706242,1.13628 -2.009721,-9.21637 -5.894265,-16.88027 -12.292087,-17.295813 -4.177778,-0.585888 -7.294671,2.935716 -11.138052,16.645915 -6.462422,17.752509 -1.634756,7.206641 -2.070766,-1.52923 z"></path><!--]--><!--]--></svg><!----> <h1 class="mt_xl2">fuz_template</h1></header> <!----><a class="card svelte-2rjm44 link left" href="/about"><!--[--><div class="icon svelte-2rjm44"><!--[--><!--]--></div><!--]--> <div class="content svelte-2rjm44"><!---->about<!----></div> <!--[!--><!--]--><!----></a><!----><!----></section> <button type="button" class="row py_md px_xl svelte-3v1vrg"><div class="size_xl5">🐸</div> <div class="mreow svelte-3v1vrg">mreow</div></button> <div class="mreows svelte-3v1vrg"><!--[--><!--]--></div><!----></main><!----><!----> <!--[!--><!--]--><!----><!--]--> <!--[--><div class="contextmenu_layout svelte-aif9y6" aria-hidden="true"></div><!--]--> <!--[!--><!--]--><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_ykjhb0 = {
+					__sveltekit_r2hq2n = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CQ2PbcLw.js"),
-						import("/_app/immutable/entry/app.hFyy-bLt.js")
+						import("/_app/immutable/entry/start.BGFb4nqo.js"),
+						import("/_app/immutable/entry/app.CQkKQsyc.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
