--- a/about.html
+++ b/about.html
@@ -15,21 +15,21 @@
 			);
 		</script>
 
-		<meta http-equiv="content-security-policy" content="child-src 'none'; default-src 'none'; frame-src 'self'; worker-src 'self' blob:; connect-src 'self'; font-src 'self' data: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; img-src 'self' data: blob: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; manifest-src 'self'; media-src 'self' data: blob: mediastream: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; object-src 'none'; script-src 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-v/g4Ytd2SynH6cEKxR6DGC9nhP4V21DN1zoIPmz5tTk='; script-src-elem 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-v/g4Ytd2SynH6cEKxR6DGC9nhP4V21DN1zoIPmz5tTk='; script-src-attr 'none'; style-src 'self' 'unsafe-inline'; style-src-elem 'self' 'unsafe-inline'; style-src-attr 'unsafe-inline'; base-uri 'none'; form-action 'self'; upgrade-insecure-requests">
+		<meta http-equiv="content-security-policy" content="child-src 'none'; default-src 'none'; frame-src 'self'; worker-src 'self' blob:; connect-src 'self'; font-src 'self' data: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; img-src 'self' data: blob: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; manifest-src 'self'; media-src 'self' data: blob: mediastream: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; object-src 'none'; script-src 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-JPasn/CXa/ON6URJh0Sdpfkzr0b9delhCTYBQJqLR6Y='; script-src-elem 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-JPasn/CXa/ON6URJh0Sdpfkzr0b9delhCTYBQJqLR6Y='; script-src-attr 'none'; style-src 'self' 'unsafe-inline'; style-src-elem 'self' 'unsafe-inline'; style-src-attr 'unsafe-inline'; base-uri 'none'; form-action 'self'; upgrade-insecure-requests">
 		<link href="/_app/immutable/assets/0.Vlymue6s.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/3.DojR5YXM.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BYvZqaLx.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DdPmJSqi.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BcHmrGuo.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/F6jqnJKD.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BiWJ1Y8X.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CstIxC2S.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.UJEZRrtF.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/7blBRjye.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/C_r-ENDv.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DPebTQxm.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.DurtpgwW.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/W2Zc0raP.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DeUNV0GS.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.Cv1KKi7I.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/ByXGkWox.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.3WJy9CX6.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/d6l4TbTR.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DBVIYOkf.js"><!--[--><!--]--><!--[--><!--[!--><!--]--><!--]--><title>@ryanatkn/fuz_template</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -38,15 +38,15 @@
 			
 			<script>
 				{
-					__sveltekit_ivezf8 = {
+					__sveltekit_19mrh0z = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BYvZqaLx.js"),
-						import("/_app/immutable/entry/app.CstIxC2S.js")
+						import("/_app/immutable/entry/start.BcHmrGuo.js"),
+						import("/_app/immutable/entry/app.UJEZRrtF.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
