--- a/about.html
+++ b/about.html
@@ -15,21 +15,21 @@
 			);
 		</script>
 
-		<meta http-equiv="content-security-policy" content="child-src 'none'; default-src 'none'; frame-src 'self'; worker-src 'self' blob:; connect-src 'self'; font-src 'self' data: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; img-src 'self' data: blob: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; manifest-src 'self'; media-src 'self' data: blob: mediastream: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; object-src 'none'; script-src 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-PhGNDh1AMyPhjKhnJZmOiEVfwe80Cs/CebY5XU4dAD0='; script-src-elem 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-PhGNDh1AMyPhjKhnJZmOiEVfwe80Cs/CebY5XU4dAD0='; script-src-attr 'none'; style-src 'self' 'unsafe-inline'; style-src-elem 'self' 'unsafe-inline'; style-src-attr 'unsafe-inline'; base-uri 'none'; form-action 'self'; upgrade-insecure-requests">
+		<meta http-equiv="content-security-policy" content="child-src 'none'; default-src 'none'; frame-src 'self'; worker-src 'self' blob:; connect-src 'self'; font-src 'self' data: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; img-src 'self' data: blob: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; manifest-src 'self'; media-src 'self' data: blob: mediastream: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; object-src 'none'; script-src 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-0ccoPMfm7ydRYVDGyFm2Q+ewJ4H773iQn3p4bGFrZM0='; script-src-elem 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-0ccoPMfm7ydRYVDGyFm2Q+ewJ4H773iQn3p4bGFrZM0='; script-src-attr 'none'; style-src 'self' 'unsafe-inline'; style-src-elem 'self' 'unsafe-inline'; style-src-attr 'unsafe-inline'; base-uri 'none'; form-action 'self'; upgrade-insecure-requests">
 		<link href="/_app/immutable/assets/0.Vlymue6s.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/3.DojR5YXM.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.D3v1UAt-.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BImHQOwq.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DCKWAclc.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DY0MiFUw.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BiWJ1Y8X.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Cn1MEyYK.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.C7HafKlr.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/7blBRjye.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/C_r-ENDv.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DPebTQxm.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.DurtpgwW.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.khdvNvsI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/W2Zc0raP.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DeUNV0GS.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.PzdqIpfE.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/B05MS7LY.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.kRj-9KiU.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CqZ-dkKK.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DBVIYOkf.js"><!--[--><!--]--><!--[--><!--[!--><!--]--><!--]--><title>@ryanatkn/fuz_template</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -38,15 +38,15 @@
 			
 			<script>
 				{
-					__sveltekit_nu9av0 = {
+					__sveltekit_yosel8 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.D3v1UAt-.js"),
-						import("/_app/immutable/entry/app.Cn1MEyYK.js")
+						import("/_app/immutable/entry/start.DCKWAclc.js"),
+						import("/_app/immutable/entry/app.C7HafKlr.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
