--- a/about.html
+++ b/about.html
@@ -15,28 +15,28 @@
 			);
 		</script>
 
-		<meta http-equiv="content-security-policy" content="child-src 'none'; default-src 'none'; frame-src 'self'; worker-src 'self' blob:; connect-src 'self'; font-src 'self' data: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; img-src 'self' data: blob: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; manifest-src 'self'; media-src 'self' data: blob: mediastream: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; object-src 'none'; script-src 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-edK9ZUCxQz4+2gDnARQW6yhokDHI5abKRUZ2xl5GQPs='; script-src-elem 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-edK9ZUCxQz4+2gDnARQW6yhokDHI5abKRUZ2xl5GQPs='; script-src-attr 'none'; style-src 'self' 'unsafe-inline'; style-src-elem 'self' 'unsafe-inline'; style-src-attr 'unsafe-inline'; base-uri 'none'; form-action 'self'; upgrade-insecure-requests">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.B6jvMpOF.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BhEFf677.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DySiFfGK.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BAmL-ebK.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BOCLLhlR.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Bd9ka3dM.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DR22vFc-.js">
+		<meta http-equiv="content-security-policy" content="child-src 'none'; default-src 'none'; frame-src 'self'; worker-src 'self' blob:; connect-src 'self'; font-src 'self' data: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; img-src 'self' data: blob: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; manifest-src 'self'; media-src 'self' data: blob: mediastream: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; object-src 'none'; script-src 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-tCGKwaUxeFy8GYmRowKTojwScTTzMlzb8HWYQ9UZ4vs='; script-src-elem 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-tCGKwaUxeFy8GYmRowKTojwScTTzMlzb8HWYQ9UZ4vs='; script-src-attr 'none'; style-src 'self' 'unsafe-inline'; style-src-elem 'self' 'unsafe-inline'; style-src-attr 'unsafe-inline'; base-uri 'none'; form-action 'self'; upgrade-insecure-requests">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CPsuGcJt.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/C36CdPzB.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/wWWEQFae.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.A2CK10ls.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DsnmJJEf.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BDKej92e.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DGmBohCO.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_11ug2c = {
+					__sveltekit_1a05x8x = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.B6jvMpOF.js"),
-						import("/_app/immutable/entry/app.BAmL-ebK.js")
+						import("/_app/immutable/entry/start.CPsuGcJt.js"),
+						import("/_app/immutable/entry/app.A2CK10ls.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
