--- a/about.html
+++ b/about.html
@@ -15,11 +15,11 @@
 			);
 		</script>
 
-		<meta http-equiv="content-security-policy" content="child-src 'none'; default-src 'none'; frame-src 'self'; worker-src 'self' blob:; connect-src 'self'; font-src 'self' data: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; img-src 'self' data: blob: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; manifest-src 'self'; media-src 'self' data: blob: mediastream: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; object-src 'none'; script-src 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-tCGKwaUxeFy8GYmRowKTojwScTTzMlzb8HWYQ9UZ4vs='; script-src-elem 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-tCGKwaUxeFy8GYmRowKTojwScTTzMlzb8HWYQ9UZ4vs='; script-src-attr 'none'; style-src 'self' 'unsafe-inline'; style-src-elem 'self' 'unsafe-inline'; style-src-attr 'unsafe-inline'; base-uri 'none'; form-action 'self'; upgrade-insecure-requests">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CPsuGcJt.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/C36CdPzB.js">
+		<meta http-equiv="content-security-policy" content="child-src 'none'; default-src 'none'; frame-src 'self'; worker-src 'self' blob:; connect-src 'self'; font-src 'self' data: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; img-src 'self' data: blob: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; manifest-src 'self'; media-src 'self' data: blob: mediastream: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; object-src 'none'; script-src 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-EGlE69wPXtQHiqmOgGI3a7qPLzvF8Tkm0t1VRwfBIJg='; script-src-elem 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-EGlE69wPXtQHiqmOgGI3a7qPLzvF8Tkm0t1VRwfBIJg='; script-src-attr 'none'; style-src 'self' 'unsafe-inline'; style-src-elem 'self' 'unsafe-inline'; style-src-attr 'unsafe-inline'; base-uri 'none'; form-action 'self'; upgrade-insecure-requests">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BU-FSQvA.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BGxyApW5.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/wWWEQFae.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.A2CK10ls.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Dw3lnQcR.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DsnmJJEf.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BDKej92e.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DGmBohCO.js">
@@ -28,15 +28,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1a05x8x = {
+					__sveltekit_107ed9b = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CPsuGcJt.js"),
-						import("/_app/immutable/entry/app.A2CK10ls.js")
+						import("/_app/immutable/entry/start.BU-FSQvA.js"),
+						import("/_app/immutable/entry/app.Dw3lnQcR.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
