--- a/about.html
+++ b/about.html
@@ -15,11 +15,11 @@
 			);
 		</script>
 
-		<meta http-equiv="content-security-policy" content="child-src 'none'; default-src 'none'; frame-src 'self'; worker-src 'self' blob:; connect-src 'self'; font-src 'self' data: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; img-src 'self' data: blob: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; manifest-src 'self'; media-src 'self' data: blob: mediastream: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; object-src 'none'; script-src 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-h9c3LM6vDq9+ZX/iqIWFcGi6qsziqifNI2tN7vjTATg='; script-src-elem 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-h9c3LM6vDq9+ZX/iqIWFcGi6qsziqifNI2tN7vjTATg='; script-src-attr 'none'; style-src 'self' 'unsafe-inline'; style-src-elem 'self' 'unsafe-inline'; style-src-attr 'unsafe-inline'; base-uri 'none'; form-action 'self'; upgrade-insecure-requests">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Sz954QoU.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/KRxiiWcp.js">
+		<meta http-equiv="content-security-policy" content="child-src 'none'; default-src 'none'; frame-src 'self'; worker-src 'self' blob:; connect-src 'self'; font-src 'self' data: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; img-src 'self' data: blob: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; manifest-src 'self'; media-src 'self' data: blob: mediastream: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.grogarden.org/ https://*.zzz.software/ https://*.zzzbot.dev/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/; object-src 'none'; script-src 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-bxhUzccvsZpy2Tg7cbZzu+PbQlpgtr+xTFyxFLkQH9E='; script-src-elem 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-bxhUzccvsZpy2Tg7cbZzu+PbQlpgtr+xTFyxFLkQH9E='; script-src-attr 'none'; style-src 'self' 'unsafe-inline'; style-src-elem 'self' 'unsafe-inline'; style-src-attr 'unsafe-inline'; base-uri 'none'; form-action 'self'; upgrade-insecure-requests">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DaiIM9GM.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BjOpWkSl.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/wWWEQFae.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BxuaUnNX.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BJkcruFg.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DsnmJJEf.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BDKej92e.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DGmBohCO.js">
@@ -28,15 +28,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_16guq9r = {
+					__sveltekit_20b5wc = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Sz954QoU.js"),
-						import("/_app/immutable/entry/app.BxuaUnNX.js")
+						import("/_app/immutable/entry/start.DaiIM9GM.js"),
+						import("/_app/immutable/entry/app.BJkcruFg.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
